--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/niekdegreef/longform.co.za#readme",
   "devDependencies": {
+    "grunt-browser-sync": "^2.1.3",
     "grunt-postcss": "^0.5.4",
     "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^3.2.0"
